--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ header {
 }
 
 ul {
+    display: flex;
+    flex-direction: row;
     list-style-type: none;
     float: right;
     margin-top: 25px;
@@ -24,7 +26,7 @@ ul li {
 ul li a {
     text-decoration: none;
     color: white;
-    padding: 5px 20px;
+    padding: 5px 25px;
     border: 1px solid transparent;
     transition: 0.5s ease;
 }
@@ -49,6 +51,7 @@ ul li.active a {
     top: 21%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-shadow: 2px 2px 30px;
     color: white;
 }
 
@@ -57,10 +60,13 @@ ul li.active a {
 }
 
 .button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     position: absolute;
     top: 71%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-51%, -50%);
 }
 
 .btn {
@@ -69,9 +75,46 @@ ul li.active a {
     color: white;
     text-decoration: none;
     transition: 0.5s ease;
+    text-shadow: 2px 2px 20px;
 }
 
 .btn:hover {
     background-color: white;
     color: black;
 }
+
+.wrapper {
+    margin: auto;
+}
+
+.nav div {
+    height: 4px;
+    background-color: white;
+    margin: 5px 0;
+    border-radius: 25px;
+    transition: 0.3s;
+}
+
+.nav {
+    width: 30px;
+    display: inline-block;
+    margin: 1em 0 0 1em;
+}
+
+.one {
+    width: 30px;
+}
+
+.two {
+    width: 20px;
+}
+
+.three {
+    width: 25px;
+}
+
+.nav:hover div {
+    width: 30px;
+}
+
+
