--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,14 @@
 }
 
 header {
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../backimg.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(../backimg.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 ul {
@@ -29,6 +33,7 @@ ul li a {
     padding: 5px 25px;
     border: 1px solid transparent;
     transition: 0.5s ease;
+    scroll-behavior: smooth;
 }
 
 ul li a:hover {
@@ -117,4 +122,38 @@ ul li.active a {
     width: 30px;
 }
 
+.servicesClass, .galleryClass, .aboutClass, .contactClass {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10em;
+    text-transform: uppercase;
+    font-weight: 700;
+    color:aquamarine;
+}
 
+section:nth-child(even) {
+    background: rgb(0, 255, 200);
+}
+
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
